@@ -1,3 +1,10 @@
+2003-07-14  TAMUKI Shoichi <tamuki@linet.gr.jp>
+
+	* interface/alsaseq_c.c,
+	  interface/rtsyn_common.c, interface/rtsyn_winmm.c,
+	  timidity/playmidi.[ch], timidity/rcp.c, timidity/readmidi.c:
+	  Support for bulk tuning dump
+
 2003-07-10  TAMUKI Shoichi <tamuki@linet.gr.jp>
 
 	* timidity/playmidi.c: Fix around single-note tuning change
